--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,8 @@ body {
 }
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {font-family: 'Montserrat', sans-serif; font-weight: 500;}
-.main-wrapper {margin-top: 100px;}
+.main-logo {margin: 75px 0;}
+.main-logo img {display: inline-block; vertical-align: middle;}
 .form-check-input {vertical-align: middle; position: relative; top: -5px; margin-right: 5px;}
 .form-check {margin-bottom: 5px;}
 #chartContainer {height: 300px;}
